WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312568
Fix some :has() sibling invalidation issue
https://bugs.webkit.org/show_bug.cgi?id=312568
Summary
Fix some :has() sibling invalidation issue
Antti Koivisto
Reported
2026-04-17 06:49:53 PDT
Related to relation forwarding.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-17 06:50:09 PDT
<
rdar://problem/175006235
>
Antti Koivisto
Comment 2
2026-04-17 06:55:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62971
EWS
Comment 3
2026-04-20 06:48:29 PDT
Committed
311583@main
(23eb17162e9e): <
https://commits.webkit.org/311583@main
> Reviewed commits have been landed. Closing PR #62971 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug