Fix some :has() sibling invalidation issue https://bugs.webkit.org/show_bug.cgi?id=312568 rdar://175006235

Reviewed by Alan Baradlay.

Fix invalidation in cases like :has(.a + .b)

* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-invalidation-first-in-sibling-chain-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/selectors/invalidation/has-sibling-insertion-removal-expected.txt:
* Source/WebCore/css/SelectorChecker.cpp:
(WebCore::SelectorChecker::matchHasPseudoClass const):

Forward AffectedByPreviousSibling, AffectsNextSibling, DescendantsAffectedByPreviousSibling relations.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::resetStyleRelations):
=* Source/WebCore/dom/Element.cpp:
=(WebCore::Element::resetStyleRelations):
=* Source/WebCore/dom/Element.h:
=(WebCore::Element::affectedByHasWithSiblingRelationship const):
=(WebCore::Element::affectedByHasWithAdjacentSiblingRelationship const):
=(WebCore::Element::setAffectedByHasWithSiblingRelationship):
=(WebCore::Element::setAffectedByHasWithAdjacentSiblingRelationship):
=(WebCore::Element::affectedByHasWithPositionalPseudoClass const): Deleted.
=(WebCore::Element::setAffectedByHasWithPositionalPseudoClass): Deleted.
=* Source/WebCore/dom/Node.h:
=* Source/WebCore/style/ChildChangeInvalidation.cpp:
=(WebCore::Style::ChildChangeInvalidation::invalidateForHasBeforeMutation):
=(WebCore::Style::ChildChangeInvalidation::invalidateForHasAfterMutation):
=* Source/WebCore/style/StyleRelations.cpp:
=(WebCore::Style::commitRelationsToRenderStyle):
=(WebCore::Style::commitRelations):
=* Source/WebCore/style/StyleRelations.h:

Rename since the value is used for more than just positional pseudo-classes.
Add a new value for the direct adjacent case where we don't need to check all siblings.

Canonical link: https://commits.webkit.org/311583@main