Source/WebCore/style/StyleRelations.cpp
@@ -72,7 +72,8 @@ std::unique_ptr<Relations> commitRelationsToRenderStyle(RenderStyle& style, cons
         case Relation::ChildrenAffectedByFirstChildRules:
         case Relation::ChildrenAffectedByLastChildRules:
         case Relation::NthChildIndex:
-        case Relation::AffectedByHasWithPositionalPseudoClass:
+        case Relation::AffectedByHasWithSiblingRelationship:
+        case Relation::AffectedByHasWithAdjacentSiblingRelationship:
             appendStyleRelation(relation);
             break;
         }
@@ -120,8 +121,11 @@ void commitRelations(std::unique_ptr<Relations> relations, Update& update)
         case Relation::ChildrenAffectedByLastChildRules:
             element.setChildrenAffectedByLastChildRules();
             break;
-        case Relation::AffectedByHasWithPositionalPseudoClass:
-            element.setAffectedByHasWithPositionalPseudoClass();
+        case Relation::AffectedByHasWithSiblingRelationship:
+            element.setAffectedByHasWithSiblingRelationship();
+            break;
+        case Relation::AffectedByHasWithAdjacentSiblingRelationship:
+            element.setAffectedByHasWithAdjacentSiblingRelationship();
             break;
         case Relation::FirstChild:
             if (auto* style = update.elementStyle(element))
